--- a/src/Detalle_Financiero/Detalle_FinancieroGUI.form
+++ b/src/Detalle_Financiero/Detalle_FinancieroGUI.form
@@ -47,7 +47,7 @@
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Id_Venta"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="a2930" class="javax.swing.JTextField" binding="textField3" default-binding="true">
