--- a/src/Caja/CajaGUI.form
+++ b/src/Caja/CajaGUI.form
@@ -122,7 +122,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Volver"/>
+          <text value="⬅️"/>
         </properties>
       </component>
       <component id="adabc" class="javax.swing.JLabel">
