--- a/src/Cliente/ClienteGUI.form
+++ b/src/Cliente/ClienteGUI.form
@@ -143,7 +143,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="⬅️ Back"/>
+          <text value="⬅️"/>
         </properties>
       </component>
       <component id="520ad" class="javax.swing.JTextField" binding="textField1" default-binding="true">
